--- a/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_gets_sw_pubs_with_wos_ids.yml
@@ -48,7 +48,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Sat, 06 Dec 2014 02:05:54 GMT
+      - Mon, 27 Apr 2015 21:33:51 GMT
       Content-Length:
       - '277'
     body:
@@ -57,7 +57,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:05:54 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:52 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -95,9 +95,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Sat, 06 Dec 2014 02:05:57 GMT
+      - Mon, 27 Apr 2015 21:33:52 GMT
       Content-Length:
-      - '9626'
+      - '9640'
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
@@ -139,9 +139,9 @@ http_interactions:
         \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
         />\r\n    <IsObsolete>false</IsObsolete>\r\n    <CopyrightPublisher>PUBLIC
         LIBRARY SCIENCE</CopyrightPublisher>\r\n    <CopyrightCity>SAN FRANCISCO</CopyrightCity>\r\n
-        \   <ArticleNumber>e58699</ArticleNumber>\r\n    <PublicationImpactFactorList>4.092,2011,ClosestToPublicationYear|4.092,2011,MostRecentYear</PublicationImpactFactorList>\r\n
-        \   <PublicationCategoryRankingList>12/84;BIOLOGY;2011;SC;ClosestToPublicationYear|12/84;BIOLOGY;2011;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,0,1|2,0,1|3,0,1|4,0,1</AuthorCitationCountList>\r\n
+        \   <ArticleNumber>e58699</ArticleNumber>\r\n    <PublicationImpactFactorList>3.534,2013,ExactPublicationYear|3.534,2013,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>8/55;MULTIDISCIPLINARY SCIENCES;2013;SC;ExactPublicationYear|8/55;MULTIDISCIPLINARY
+        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,1|2,0,1|3,0,1|4,0,1</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62856137</PublicationItemID>\r\n    <Title>Emergence
@@ -158,7 +158,7 @@ http_interactions:
         \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList>TRAJECTORIES|TRANSITION|KINETICS</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>20</NumberOfReferences>\r\n
-        \   <TimesCited>7</TimesCited>\r\n    <TimesNotSelfCited>4</TimesNotSelfCited>\r\n
+        \   <TimesCited>9</TimesCited>\r\n    <TimesNotSelfCited>5</TimesNotSelfCited>\r\n
         \   <PMID>23540906</PMID>\r\n    <WoSItemID>000317872800004</WoSItemID>\r\n
         \   <PublicationSourceTitle>JOURNAL OF THE AMERICAN CHEMICAL SOCIETY</PublicationSourceTitle>\r\n
         \   <Volume>135</Volume>\r\n    <Issue>15</Issue>\r\n    <Pagination>5501-5504</Pagination>\r\n
@@ -170,10 +170,10 @@ http_interactions:
         />\r\n    <OrdinalRank>1</OrdinalRank>\r\n    <NormalizedRank xsi:nil=\"true\"
         />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher>AMER CHEMICAL SOC</CopyrightPublisher>\r\n    <CopyrightCity>WASHINGTON</CopyrightCity>\r\n
-        \   <PublicationImpactFactorList>9.907,2011,ClosestToPublicationYear|9.907,2011,MostRecentYear</PublicationImpactFactorList>\r\n
-        \   <PublicationCategoryRankingList>11/149;CHEMISTRY, MULTIDISCIPLINARY;2011;SC;ClosestToPublicationYear|11/149;CHEMISTRY,
-        MULTIDISCIPLINARY;2011;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,2,5|2,2,5|3,2,5</AuthorCitationCountList>\r\n
+        \   <PublicationImpactFactorList>11.444,2013,ExactPublicationYear|11.444,2013,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>10/148;CHEMISTRY, MULTIDISCIPLINARY;2013;SC;ExactPublicationYear|10/148;CHEMISTRY,
+        MULTIDISCIPLINARY;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
+        \   <AuthorCitationCountList>1,3,6|2,2,7|3,3,6</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>DC</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62922945</PublicationItemID>\r\n    <Title>Functional
@@ -194,7 +194,7 @@ http_interactions:
         \   <AuthorCount>2</AuthorCount>\r\n    <KeywordList>SOLUTE|PROTEIN|WATER|CHAPERONINS</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>20</NumberOfReferences>\r\n
-        \   <TimesCited>0</TimesCited>\r\n    <TimesNotSelfCited>0</TimesNotSelfCited>\r\n
+        \   <TimesCited>1</TimesCited>\r\n    <TimesNotSelfCited>1</TimesNotSelfCited>\r\n
         \   <PMID>23635172</PMID>\r\n    <WoSItemID>000318550800072</WoSItemID>\r\n
         \   <PublicationSourceTitle>JOURNAL OF CHEMICAL PHYSICS</PublicationSourceTitle>\r\n
         \   <Volume>138</Volume>\r\n    <Issue>16</Issue>\r\n    <Pagination />\r\n
@@ -206,12 +206,12 @@ http_interactions:
         />\r\n    <OrdinalRank>2</OrdinalRank>\r\n    <NormalizedRank xsi:nil=\"true\"
         />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher>AMER INST PHYSICS</CopyrightPublisher>\r\n    <CopyrightCity>MELVILLE</CopyrightCity>\r\n
-        \   <ArticleNumber>165101</ArticleNumber>\r\n    <PublicationImpactFactorList>3.333,2011,ClosestToPublicationYear|3.333,2011,MostRecentYear</PublicationImpactFactorList>\r\n
-        \   <PublicationCategoryRankingList>7/32;PHYSICS, ATOMIC, MOLECULAR &amp;
-        CHEMICAL;2011;SC;ClosestToPublicationYear|7/32;PHYSICS, ATOMIC, MOLECULAR
-        &amp; CHEMICAL;2011;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,0,0|2,0,0</AuthorCitationCountList>\r\n    <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n
-        \   <CopyrightCountry>UNITED STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
+        \   <ArticleNumber>165101</ArticleNumber>\r\n    <PublicationImpactFactorList>3.122,2013,ExactPublicationYear|3.122,2013,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>8/33;PHYSICS, ATOMIC, MOLECULAR &amp;
+        CHEMICAL;2013;SC;ExactPublicationYear|8/33;PHYSICS, ATOMIC, MOLECULAR &amp;
+        CHEMICAL;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,1|2,0,1</AuthorCitationCountList>\r\n
+        \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
+        STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:05:58 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:53 GMT
 recorded_with: VCR 2.5.0
