--- a/fixtures/vcr_cassettes/sciencewire_harvester_adds_new_publication.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_adds_new_publication.yml
@@ -37,7 +37,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Sat, 06 Dec 2014 02:07:16 GMT
+      - Mon, 27 Apr 2015 21:33:31 GMT
       Content-Length:
       - '6476'
     body:
@@ -123,7 +123,7 @@ http_interactions:
         \   <CopyrightPublisher>LIPPINCOTT WILLIAMS &amp; WILKINS</CopyrightPublisher>\r\n
         \   <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:17 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:32 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -141,7 +141,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sat, 06 Dec 2014 02:07:17 GMT
+      - Mon, 27 Apr 2015 21:33:31 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -149,12 +149,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BE5A1448264D51_0970SID
+      - 08DD624153EAB2B1_0248SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BE5A1448264D51_0970SID; domain=.nih.gov; path=/; expires=Sun, 06
-        Dec 2015 02:07:17 GMT
+      - ncbi_sid=08DD624153EAB2B1_0248SID; domain=.nih.gov; path=/; expires=Wed, 27
+        Apr 2016 21:33:31 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -162,7 +162,7 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\n<!DOCTYPE PubmedArticleSet PUBLIC \"-//NLM//DTD
-        PubMedArticle, 1st January 2014//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_140101.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
+        PubMedArticle, 1st January 2015//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_150101.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
         \   <MedlineCitation Owner=\"NLM\" Status=\"MEDLINE\">\n        <PMID Version=\"1\">10048354</PMID>\n
         \       <DateCreated>\n            <Year>1999</Year>\n            <Month>04</Month>\n
         \           <Day>22</Day>\n        </DateCreated>\n        <DateCompleted>\n
@@ -189,50 +189,55 @@ http_interactions:
         patient with frostbite.</AbstractText>\n            </Abstract>\n            <AuthorList
         CompleteYN=\"Y\">\n                <Author ValidYN=\"Y\">\n                    <LastName>McAdams</LastName>\n
         \                   <ForeName>T R</ForeName>\n                    <Initials>TR</Initials>\n
-        \                   <Affiliation>Department of Orthopaedics and Rehabilitation,
-        University of New Mexico, Albuquerque, USA.</Affiliation>\n                </Author>\n
+        \                   <AffiliationInfo>\n                        <Affiliation>Department
+        of Orthopaedics and Rehabilitation, University of New Mexico, Albuquerque,
+        USA.</Affiliation>\n                    </AffiliationInfo>\n                </Author>\n
         \               <Author ValidYN=\"Y\">\n                    <LastName>Swenson</LastName>\n
         \                   <ForeName>D R</ForeName>\n                    <Initials>DR</Initials>\n
         \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>Miller</LastName>\n
         \                   <ForeName>R A</ForeName>\n                    <Initials>RA</Initials>\n
         \               </Author>\n            </AuthorList>\n            <Language>eng</Language>\n
-        \           <PublicationTypeList>\n                <PublicationType>Case Reports</PublicationType>\n
-        \               <PublicationType>Journal Article</PublicationType>\n                <PublicationType>Review</PublicationType>\n
+        \           <PublicationTypeList>\n                <PublicationType UI=\"D002363\">Case
+        Reports</PublicationType>\n                <PublicationType UI=\"D016428\">Journal
+        Article</PublicationType>\n                <PublicationType UI=\"D016454\">Review</PublicationType>\n
         \           </PublicationTypeList>\n        </Article>\n        <MedlineJournalInfo>\n
         \           <Country>UNITED STATES</Country>\n            <MedlineTA>Am J
         Orthop (Belle Mead NJ)</MedlineTA>\n            <NlmUniqueID>9502918</NlmUniqueID>\n
         \           <ISSNLinking>1078-4519</ISSNLinking>\n        </MedlineJournalInfo>\n
         \       <CitationSubset>IM</CitationSubset>\n        <MeshHeadingList>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Combined Modality Therapy</DescriptorName>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D003131\">Combined
+        Modality Therapy</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D005260\">Female</DescriptorName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Female</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Frostbite</DescriptorName>\n
-        \               <QualifierName MajorTopicYN=\"Y\">diagnosis</QualifierName>\n
-        \               <QualifierName MajorTopicYN=\"N\">drug therapy</QualifierName>\n
-        \               <QualifierName MajorTopicYN=\"N\">physiopathology</QualifierName>\n
-        \               <QualifierName MajorTopicYN=\"Y\">surgery</QualifierName>\n
+        MajorTopicYN=\"N\" UI=\"D005627\">Frostbite</DescriptorName>\n                <QualifierName
+        MajorTopicYN=\"Y\" UI=\"Q000175\">diagnosis</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"N\" UI=\"Q000188\">drug therapy</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"N\" UI=\"Q000503\">physiopathology</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"Y\" UI=\"Q000601\">surgery</QualifierName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D006801\">Humans</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D015601\">Injury Severity
+        Score</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D008297\">Male</DescriptorName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Humans</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Injury Severity Score</DescriptorName>\n
-        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Male</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Middle Aged</DescriptorName>\n
-        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"Y\">Orthopedic Procedures</DescriptorName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Prognosis</DescriptorName>\n
-        \           </MeshHeading>\n        </MeshHeadingList>\n        <NumberOfReferences>44</NumberOfReferences>\n
-        \   </MedlineCitation>\n    <PubmedData>\n        <History>\n            <PubMedPubDate
-        PubStatus=\"pubmed\">\n                <Year>1999</Year>\n                <Month>2</Month>\n
-        \               <Day>27</Day>\n            </PubMedPubDate>\n            <PubMedPubDate
-        PubStatus=\"medline\">\n                <Year>1999</Year>\n                <Month>2</Month>\n
-        \               <Day>27</Day>\n                <Hour>0</Hour>\n                <Minute>1</Minute>\n
-        \           </PubMedPubDate>\n            <PubMedPubDate PubStatus=\"entrez\">\n
+        MajorTopicYN=\"N\" UI=\"D008875\">Middle Aged</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"Y\"
+        UI=\"D019637\">Orthopedic Procedures</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D011379\">Prognosis</DescriptorName>\n            </MeshHeading>\n        </MeshHeadingList>\n
+        \       <NumberOfReferences>44</NumberOfReferences>\n    </MedlineCitation>\n
+        \   <PubmedData>\n        <History>\n            <PubMedPubDate PubStatus=\"pubmed\">\n
         \               <Year>1999</Year>\n                <Month>2</Month>\n                <Day>27</Day>\n
-        \               <Hour>0</Hour>\n                <Minute>0</Minute>\n            </PubMedPubDate>\n
-        \       </History>\n        <PublicationStatus>ppublish</PublicationStatus>\n
-        \       <ArticleIdList>\n            <ArticleId IdType=\"pubmed\">10048354</ArticleId>\n
-        \       </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n\n<PubmedArticle>\n
-        \   <MedlineCitation Owner=\"NLM\" Status=\"MEDLINE\">\n        <PMID Version=\"1\">1914489</PMID>\n
+        \           </PubMedPubDate>\n            <PubMedPubDate PubStatus=\"medline\">\n
+        \               <Year>1999</Year>\n                <Month>2</Month>\n                <Day>27</Day>\n
+        \               <Hour>0</Hour>\n                <Minute>1</Minute>\n            </PubMedPubDate>\n
+        \           <PubMedPubDate PubStatus=\"entrez\">\n                <Year>1999</Year>\n
+        \               <Month>2</Month>\n                <Day>27</Day>\n                <Hour>0</Hour>\n
+        \               <Minute>0</Minute>\n            </PubMedPubDate>\n        </History>\n
+        \       <PublicationStatus>ppublish</PublicationStatus>\n        <ArticleIdList>\n
+        \           <ArticleId IdType=\"pubmed\">10048354</ArticleId>\n        </ArticleIdList>\n
+        \   </PubmedData>\n</PubmedArticle>\n\n\n<PubmedArticle>\n    <MedlineCitation
+        Owner=\"NLM\" Status=\"MEDLINE\">\n        <PMID Version=\"1\">1914489</PMID>\n
         \       <DateCreated>\n            <Year>1991</Year>\n            <Month>11</Month>\n
         \           <Day>13</Day>\n        </DateCreated>\n        <DateCompleted>\n
         \           <Year>1991</Year>\n            <Month>11</Month>\n            <Day>13</Day>\n
@@ -287,53 +292,57 @@ http_interactions:
         significantly greater damage.</AbstractText>\n            </Abstract>\n            <AuthorList
         CompleteYN=\"Y\">\n                <Author ValidYN=\"Y\">\n                    <LastName>Todd</LastName>\n
         \                   <ForeName>D A</ForeName>\n                    <Initials>DA</Initials>\n
-        \                   <Affiliation>Department of Pediatrics, Westmead Hospital,
-        NSW, Australia.</Affiliation>\n                </Author>\n                <Author
-        ValidYN=\"Y\">\n                    <LastName>John</LastName>\n                    <ForeName>E</ForeName>\n
-        \                   <Initials>E</Initials>\n                </Author>\n                <Author
-        ValidYN=\"Y\">\n                    <LastName>Osborn</LastName>\n                    <ForeName>R
-        A</ForeName>\n                    <Initials>RA</Initials>\n                </Author>\n
-        \           </AuthorList>\n            <Language>eng</Language>\n            <PublicationTypeList>\n
-        \               <PublicationType>Comparative Study</PublicationType>\n                <PublicationType>Journal
+        \                   <AffiliationInfo>\n                        <Affiliation>Department
+        of Pediatrics, Westmead Hospital, NSW, Australia.</Affiliation>\n                    </AffiliationInfo>\n
+        \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>John</LastName>\n
+        \                   <ForeName>E</ForeName>\n                    <Initials>E</Initials>\n
+        \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>Osborn</LastName>\n
+        \                   <ForeName>R A</ForeName>\n                    <Initials>RA</Initials>\n
+        \               </Author>\n            </AuthorList>\n            <Language>eng</Language>\n
+        \           <PublicationTypeList>\n                <PublicationType UI=\"D003160\">Comparative
+        Study</PublicationType>\n                <PublicationType UI=\"D016428\">Journal
         Article</PublicationType>\n            </PublicationTypeList>\n        </Article>\n
         \       <MedlineJournalInfo>\n            <Country>UNITED STATES</Country>\n
         \           <MedlineTA>Crit Care Med</MedlineTA>\n            <NlmUniqueID>0355501</NlmUniqueID>\n
         \           <ISSNLinking>0090-3493</ISSNLinking>\n        </MedlineJournalInfo>\n
         \       <CitationSubset>AIM</CitationSubset>\n        <CitationSubset>IM</CitationSubset>\n
         \       <MeshHeadingList>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Animals</DescriptorName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Animals,
-        Newborn</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Female</DescriptorName>\n
+        MajorTopicYN=\"N\" UI=\"D000818\">Animals</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D000831\">Animals, Newborn</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D005260\">Female</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D006612\">High-Frequency
+        Ventilation</DescriptorName>\n                <QualifierName MajorTopicYN=\"Y\"
+        UI=\"Q000009\">adverse effects</QualifierName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D006813\">Humidity</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D007442\">Intubation,
+        Intratracheal</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D008297\">Male</DescriptorName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">High-Frequency Ventilation</DescriptorName>\n                <QualifierName
-        MajorTopicYN=\"Y\">adverse effects</QualifierName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Humidity</DescriptorName>\n
+        MajorTopicYN=\"N\" UI=\"D011175\">Positive-Pressure Respiration</DescriptorName>\n
+        \               <QualifierName MajorTopicYN=\"Y\" UI=\"Q000009\">adverse effects</QualifierName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Intubation, Intratracheal</DescriptorName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Male</DescriptorName>\n
+        MajorTopicYN=\"N\" UI=\"D012121\">Respiration, Artificial</DescriptorName>\n
+        \               <QualifierName MajorTopicYN=\"Y\" UI=\"Q000009\">adverse effects</QualifierName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Positive-Pressure Respiration</DescriptorName>\n                <QualifierName
-        MajorTopicYN=\"Y\">adverse effects</QualifierName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Respiration,
-        Artificial</DescriptorName>\n                <QualifierName MajorTopicYN=\"Y\">adverse
-        effects</QualifierName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Sheep</DescriptorName>\n
-        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Trachea</DescriptorName>\n                <QualifierName
-        MajorTopicYN=\"Y\">injuries</QualifierName>\n                <QualifierName
-        MajorTopicYN=\"N\">pathology</QualifierName>\n            </MeshHeading>\n
-        \       </MeshHeadingList>\n    </MedlineCitation>\n    <PubmedData>\n        <History>\n
-        \           <PubMedPubDate PubStatus=\"pubmed\">\n                <Year>1991</Year>\n
-        \               <Month>10</Month>\n                <Day>1</Day>\n            </PubMedPubDate>\n
-        \           <PubMedPubDate PubStatus=\"medline\">\n                <Year>1991</Year>\n
-        \               <Month>10</Month>\n                <Day>1</Day>\n                <Hour>0</Hour>\n
-        \               <Minute>1</Minute>\n            </PubMedPubDate>\n            <PubMedPubDate
-        PubStatus=\"entrez\">\n                <Year>1991</Year>\n                <Month>10</Month>\n
-        \               <Day>1</Day>\n                <Hour>0</Hour>\n                <Minute>0</Minute>\n
-        \           </PubMedPubDate>\n        </History>\n        <PublicationStatus>ppublish</PublicationStatus>\n
+        MajorTopicYN=\"N\" UI=\"D012756\">Sheep</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D014132\">Trachea</DescriptorName>\n                <QualifierName MajorTopicYN=\"Y\"
+        UI=\"Q000293\">injuries</QualifierName>\n                <QualifierName MajorTopicYN=\"N\"
+        UI=\"Q000473\">pathology</QualifierName>\n            </MeshHeading>\n        </MeshHeadingList>\n
+        \   </MedlineCitation>\n    <PubmedData>\n        <History>\n            <PubMedPubDate
+        PubStatus=\"pubmed\">\n                <Year>1991</Year>\n                <Month>10</Month>\n
+        \               <Day>1</Day>\n            </PubMedPubDate>\n            <PubMedPubDate
+        PubStatus=\"medline\">\n                <Year>1991</Year>\n                <Month>10</Month>\n
+        \               <Day>1</Day>\n                <Hour>0</Hour>\n                <Minute>1</Minute>\n
+        \           </PubMedPubDate>\n            <PubMedPubDate PubStatus=\"entrez\">\n
+        \               <Year>1991</Year>\n                <Month>10</Month>\n                <Day>1</Day>\n
+        \               <Hour>0</Hour>\n                <Minute>0</Minute>\n            </PubMedPubDate>\n
+        \       </History>\n        <PublicationStatus>ppublish</PublicationStatus>\n
         \       <ArticleIdList>\n            <ArticleId IdType=\"pubmed\">1914489</ArticleId>\n
         \       </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:17 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:32 GMT
 recorded_with: VCR 2.5.0
