--- a/fixtures/vcr_cassettes/sciencewire_harvester_update_pubmed_with_sw_data.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_update_pubmed_with_sw_data.yml
@@ -37,7 +37,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Sat, 06 Dec 2014 02:07:19 GMT
+      - Mon, 27 Apr 2015 21:33:34 GMT
       Content-Length:
       - '2075'
     body:
@@ -68,7 +68,7 @@ http_interactions:
         />\r\n    <NewPublicationItemID>42711845</NewPublicationItemID>\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher />\r\n    <CopyrightCity />\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:20 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:35 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -86,7 +86,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sat, 06 Dec 2014 02:07:20 GMT
+      - Mon, 27 Apr 2015 21:33:34 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -94,12 +94,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BF4D7F48264D81_0727SID
+      - 9DFD4D5D53EAB2E1_0354SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BF4D7F48264D81_0727SID; domain=.nih.gov; path=/; expires=Sun, 06
-        Dec 2015 02:07:20 GMT
+      - ncbi_sid=9DFD4D5D53EAB2E1_0354SID; domain=.nih.gov; path=/; expires=Wed, 27
+        Apr 2016 21:33:34 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -107,7 +107,7 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\n<!DOCTYPE PubmedArticleSet PUBLIC \"-//NLM//DTD
-        PubMedArticle, 1st January 2014//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_140101.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
+        PubMedArticle, 1st January 2015//EN\" \"http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_150101.dtd\">\n<PubmedArticleSet>\n<PubmedArticle>\n
         \   <MedlineCitation Owner=\"NLM\" Status=\"MEDLINE\">\n        <PMID Version=\"1\">10048354</PMID>\n
         \       <DateCreated>\n            <Year>1999</Year>\n            <Month>04</Month>\n
         \           <Day>22</Day>\n        </DateCreated>\n        <DateCompleted>\n
@@ -134,51 +134,56 @@ http_interactions:
         patient with frostbite.</AbstractText>\n            </Abstract>\n            <AuthorList
         CompleteYN=\"Y\">\n                <Author ValidYN=\"Y\">\n                    <LastName>McAdams</LastName>\n
         \                   <ForeName>T R</ForeName>\n                    <Initials>TR</Initials>\n
-        \                   <Affiliation>Department of Orthopaedics and Rehabilitation,
-        University of New Mexico, Albuquerque, USA.</Affiliation>\n                </Author>\n
+        \                   <AffiliationInfo>\n                        <Affiliation>Department
+        of Orthopaedics and Rehabilitation, University of New Mexico, Albuquerque,
+        USA.</Affiliation>\n                    </AffiliationInfo>\n                </Author>\n
         \               <Author ValidYN=\"Y\">\n                    <LastName>Swenson</LastName>\n
         \                   <ForeName>D R</ForeName>\n                    <Initials>DR</Initials>\n
         \               </Author>\n                <Author ValidYN=\"Y\">\n                    <LastName>Miller</LastName>\n
         \                   <ForeName>R A</ForeName>\n                    <Initials>RA</Initials>\n
         \               </Author>\n            </AuthorList>\n            <Language>eng</Language>\n
-        \           <PublicationTypeList>\n                <PublicationType>Case Reports</PublicationType>\n
-        \               <PublicationType>Journal Article</PublicationType>\n                <PublicationType>Review</PublicationType>\n
+        \           <PublicationTypeList>\n                <PublicationType UI=\"D002363\">Case
+        Reports</PublicationType>\n                <PublicationType UI=\"D016428\">Journal
+        Article</PublicationType>\n                <PublicationType UI=\"D016454\">Review</PublicationType>\n
         \           </PublicationTypeList>\n        </Article>\n        <MedlineJournalInfo>\n
         \           <Country>UNITED STATES</Country>\n            <MedlineTA>Am J
         Orthop (Belle Mead NJ)</MedlineTA>\n            <NlmUniqueID>9502918</NlmUniqueID>\n
         \           <ISSNLinking>1078-4519</ISSNLinking>\n        </MedlineJournalInfo>\n
         \       <CitationSubset>IM</CitationSubset>\n        <MeshHeadingList>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Combined Modality Therapy</DescriptorName>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D003131\">Combined
+        Modality Therapy</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D005260\">Female</DescriptorName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Female</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Frostbite</DescriptorName>\n
-        \               <QualifierName MajorTopicYN=\"Y\">diagnosis</QualifierName>\n
-        \               <QualifierName MajorTopicYN=\"N\">drug therapy</QualifierName>\n
-        \               <QualifierName MajorTopicYN=\"N\">physiopathology</QualifierName>\n
-        \               <QualifierName MajorTopicYN=\"Y\">surgery</QualifierName>\n
+        MajorTopicYN=\"N\" UI=\"D005627\">Frostbite</DescriptorName>\n                <QualifierName
+        MajorTopicYN=\"Y\" UI=\"Q000175\">diagnosis</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"N\" UI=\"Q000188\">drug therapy</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"N\" UI=\"Q000503\">physiopathology</QualifierName>\n                <QualifierName
+        MajorTopicYN=\"Y\" UI=\"Q000601\">surgery</QualifierName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D006801\">Humans</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D015601\">Injury Severity
+        Score</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
+        \               <DescriptorName MajorTopicYN=\"N\" UI=\"D008297\">Male</DescriptorName>\n
         \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Humans</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Injury Severity Score</DescriptorName>\n
-        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"N\">Male</DescriptorName>\n            </MeshHeading>\n            <MeshHeading>\n
-        \               <DescriptorName MajorTopicYN=\"N\">Middle Aged</DescriptorName>\n
-        \           </MeshHeading>\n            <MeshHeading>\n                <DescriptorName
-        MajorTopicYN=\"Y\">Orthopedic Procedures</DescriptorName>\n            </MeshHeading>\n
-        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\">Prognosis</DescriptorName>\n
-        \           </MeshHeading>\n        </MeshHeadingList>\n        <NumberOfReferences>44</NumberOfReferences>\n
-        \   </MedlineCitation>\n    <PubmedData>\n        <History>\n            <PubMedPubDate
-        PubStatus=\"pubmed\">\n                <Year>1999</Year>\n                <Month>2</Month>\n
-        \               <Day>27</Day>\n            </PubMedPubDate>\n            <PubMedPubDate
-        PubStatus=\"medline\">\n                <Year>1999</Year>\n                <Month>2</Month>\n
-        \               <Day>27</Day>\n                <Hour>0</Hour>\n                <Minute>1</Minute>\n
-        \           </PubMedPubDate>\n            <PubMedPubDate PubStatus=\"entrez\">\n
+        MajorTopicYN=\"N\" UI=\"D008875\">Middle Aged</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"Y\"
+        UI=\"D019637\">Orthopedic Procedures</DescriptorName>\n            </MeshHeading>\n
+        \           <MeshHeading>\n                <DescriptorName MajorTopicYN=\"N\"
+        UI=\"D011379\">Prognosis</DescriptorName>\n            </MeshHeading>\n        </MeshHeadingList>\n
+        \       <NumberOfReferences>44</NumberOfReferences>\n    </MedlineCitation>\n
+        \   <PubmedData>\n        <History>\n            <PubMedPubDate PubStatus=\"pubmed\">\n
         \               <Year>1999</Year>\n                <Month>2</Month>\n                <Day>27</Day>\n
-        \               <Hour>0</Hour>\n                <Minute>0</Minute>\n            </PubMedPubDate>\n
-        \       </History>\n        <PublicationStatus>ppublish</PublicationStatus>\n
-        \       <ArticleIdList>\n            <ArticleId IdType=\"pubmed\">10048354</ArticleId>\n
-        \       </ArticleIdList>\n    </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
+        \           </PubMedPubDate>\n            <PubMedPubDate PubStatus=\"medline\">\n
+        \               <Year>1999</Year>\n                <Month>2</Month>\n                <Day>27</Day>\n
+        \               <Hour>0</Hour>\n                <Minute>1</Minute>\n            </PubMedPubDate>\n
+        \           <PubMedPubDate PubStatus=\"entrez\">\n                <Year>1999</Year>\n
+        \               <Month>2</Month>\n                <Day>27</Day>\n                <Hour>0</Hour>\n
+        \               <Minute>0</Minute>\n            </PubMedPubDate>\n        </History>\n
+        \       <PublicationStatus>ppublish</PublicationStatus>\n        <ArticleIdList>\n
+        \           <ArticleId IdType=\"pubmed\">10048354</ArticleId>\n        </ArticleIdList>\n
+        \   </PubmedData>\n</PubmedArticle>\n\n</PubmedArticleSet>\n"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:20 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:35 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -196,7 +201,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Sat, 06 Dec 2014 02:07:20 GMT
+      - Mon, 27 Apr 2015 21:33:34 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -204,12 +209,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BF794D48264D81_0144SID
+      - 08DE196A53EAB2E1_0848SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BF794D48264D81_0144SID; domain=.nih.gov; path=/; expires=Sun, 06
-        Dec 2015 02:07:20 GMT
+      - ncbi_sid=08DE196A53EAB2E1_0848SID; domain=.nih.gov; path=/; expires=Wed, 27
+        Apr 2016 21:33:34 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -222,5 +227,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:20 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:36 GMT
 recorded_with: VCR 2.5.0
