--- a/fixtures/vcr_cassettes/sourcelookup_spec_doi_local_manual_found.yml
+++ b/fixtures/vcr_cassettes/sourcelookup_spec_doi_local_manual_found.yml
@@ -47,7 +47,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Sat, 06 Dec 2014 02:07:01 GMT
+      - Mon, 27 Apr 2015 21:33:02 GMT
       Content-Length:
       - '278'
     body:
@@ -56,7 +56,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>143234</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:01 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:04 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/143234?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -94,9 +94,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Sat, 06 Dec 2014 02:07:02 GMT
+      - Mon, 27 Apr 2015 21:33:04 GMT
       Content-Length:
-      - '3709'
+      - '3701'
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
@@ -125,7 +125,7 @@ http_interactions:
         AXONS|PKC-DELTA|ACTIVATION|MOUSE OPTIC CHIASM|Shh|axon guidance|ILK|PKC alpha</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>63</NumberOfReferences>\r\n
-        \   <TimesCited>7</TimesCited>\r\n    <TimesNotSelfCited>7</TimesNotSelfCited>\r\n
+        \   <TimesCited>8</TimesCited>\r\n    <TimesNotSelfCited>8</TimesNotSelfCited>\r\n
         \   <PMID>22521536</PMID>\r\n    <WoSItemID>000305547700008</WoSItemID>\r\n
         \   <PublicationSourceTitle>MOLECULAR AND CELLULAR NEUROSCIENCE</PublicationSourceTitle>\r\n
         \   <Volume>50</Volume>\r\n    <Issue>1</Issue>\r\n    <Pagination>82-92</Pagination>\r\n
@@ -137,11 +137,11 @@ http_interactions:
         \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
         />\r\n    <IsObsolete>false</IsObsolete>\r\n    <CopyrightPublisher>ACADEMIC
         PRESS INC ELSEVIER SCIENCE</CopyrightPublisher>\r\n    <CopyrightCity>SAN
-        DIEGO</CopyrightCity>\r\n    <PublicationImpactFactorList>3.663,2011,ClosestToPublicationYear|3.663,2011,MostRecentYear</PublicationImpactFactorList>\r\n
-        \   <PublicationCategoryRankingList>77/242;NEUROSCIENCES;2011;SC;ClosestToPublicationYear|77/242;NEUROSCIENCES;2011;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,0,7|2,0,7|3,0,7|4,0,7|5,0,7</AuthorCitationCountList>\r\n
+        DIEGO</CopyrightCity>\r\n    <PublicationImpactFactorList>3.837,2012,ExactPublicationYear|3.734,2013,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>74/252;NEUROSCIENCES;2012;SC;ExactPublicationYear|82/252;NEUROSCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
+        \   <AuthorCitationCountList>1,0,8|2,0,8|3,0,8|4,0,8|5,0,8</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Sat, 06 Dec 2014 02:07:02 GMT
+  recorded_at: Mon, 27 Apr 2015 21:33:04 GMT
 recorded_with: VCR 2.5.0
